# alpha-photo-share

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  dockerignore  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
migrations/: env.py
migrations/versions/: 1fa4c5aa01f1_add_users_model.py  250d98b21d84_fix_posttag.py  2be6b1c92260_init.py  57e282235d36_add_transformed_images_model.py  5cce4a244041_add_is_active_field_to_users.py  6d49a61ac8a1_add_posts_related_tables.py  ef87bdae798f_add_transformed_images_model.py
scripts/: entrypoint_backend.sh
src/api/auth/: auth.py
src/api/comment/: __init__.py  comments.py
src/api/general/: check.py
src/api/images/: __init__.py  images.py
src/api/post/: __init__.py  post.py  tag.py
src/api/qrcode/: __init__.py  generate.py
src/api/transform_images/: images.py
src/api/user/: __init__.py  user.py
src/api/users/: users.py
src/core/: __init__.py
src/core/config/: base_config.py  config.py
src/core/logger/: logger.py
src/db/: database.py  events.py  redis.py
src/models/: __init__.py  image.py  posts.py  transformed_image.py  transformed_images.py  users.py
src/repository/: comments.py  image.py  image_repository.py  posts.py  tags.py  transformed_images.py  user.py
src/schemas/: comments.py  enums.py  image.py  images.py  post.py  qrcode.py  user.py
src/services/: auth.py  image.py  image_service.py  qr_code.py  qrcode_service.py  roles.py
